Implements jdbc product repository