@@ -1,5 +1,7 @@
 package com.saburto.warehouse.domain.entities;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
@@ -26,6 +28,15 @@ public class ProductDefinition {
     }
 
     public Map<Integer, Integer> getArticlesAmount() {
-        return Map.copyOf(containingArticles);
+        return Collections.unmodifiableMap(containingArticles);
+    }
+
+    public static ProductDefinition merge(ProductDefinition def1, ProductDefinition def2) {
+
+        var newMap = new HashMap<Integer, Integer>();
+        newMap.putAll(def1.containingArticles);
+        newMap.putAll(def2.containingArticles);
+
+        return new ProductDefinition(def1.getName(), newMap);
     }
 }
